# factory-floor

./: .env.activity.example  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODEX_KICKOFF_PROMPT.md  CONTRIBUTING.md  NOTICE  PR54_PATCH_ERROR.txt  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  quality-gates.json  tsconfig.base.json  tsconfig.json  vitest.acceptance.config.ts  vitest.config.ts  vitest.integration.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.github/: .durable-result-handoff-trigger  .external-action-concurrency-trigger  .sync-external-action-recovery  README.md  REVIEW_CLEARANCE.md  activity-composition-trigger.txt  agent-ci-manifest.json  ci-trigger.txt  dependabot.yml  discord-activity-child-trigger.txt  pull_request_template.md  review-clearance-probe.md  task10-ci-trigger  tree-api-check.txt
docs/: README.md
examples/: investigation-system-target.yaml  investigation-system.yaml
scripts/: accept-m1.sh  agent-pr-handoff-state.mjs  agent-pr-handoff-state.test.mjs  audit-publication-github-all.sh  audit-publication-github.sh  audit-publication-history.sh  audit-publication-workflow-attempts.sh  bootstrap-contract.test.mjs  bootstrap-workspace.sh  check-ci-quality-gates.mjs  check-conformance-ledger.mjs  check-repository-drift.mjs  (+66 more)
workers/demo-py/: README.md  pyproject.toml
workers/demo-py/src/factory_floor_demo_py/: verifier.py
workers/demo-py/tests/: conftest.py  test_production_entrypoint.py  test_verifier.py
(+309 files in other folders)
